--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,8 @@
 @charset 'utf-8';
 
 html {
-	font-family: 'Apple SD Gothic Neo', Roboto, 'Noto Sans KR', NanumGothic, 'Malgun Gothic', sans-serif;
-	line-height: 1.2;
+	font-family: 'Noto Sans KR', sans-serif;
+	line-height: 1.4;
 	word-wrap: break-word;
 }
 body {
@@ -47,4 +47,5 @@ button {
 	border: 0;
 	background: transparent;
 	cursor: pointer;
+	font-family: 'Noto Sans KR', sans-serif;
 }
